--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Technician</h3>
                             <div class="subheading mb-3">Toshiba corporation</div>
-                            <p>Mainly repair and monunt informatical products</p>
+                            <p>Mainly repair and mount informatical products</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2014</span></div>
                     </div>
@@ -94,8 +94,8 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">C.E.S. Ramon y Cajal</h3>
-                            <div class="subheading mb-3">Administrator of computer systems and local area networks </div>
+                            <h3 class="mb-0">Administrator of computer systems and local area networks </h3>
+                            <div class="subheading mb-3">C.E.S. Ramon y Cajal</div>
                             <div>Computer Science - Mainly hardware about computers and networks</div>
                             <p>Made in 2 years with note medium of 6.5</p>
                         </div>
