--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         C\Arabial 115 · Granada, CP 18003 · 625230857 · 621334608  · 
                         <a href="mailto:name@email.com">ciberwaters@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a versatile technician who adapts to any type of field, from the assembly of systems at the hardware level, to any field of programming, whether web or multisystem.</p>
+                    <p class="lead mb-5">I am a versatile technician who adapts to any type of field, from the assembly of systems at the hardware level, to any programming field, whether web or multisystem.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alberto-fernandez-alonso-335a49148/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Albertuso/"><i class="fab fa-github"></i></a>
@@ -96,7 +96,6 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Administrator of computer systems and local area networks </h3>
                             <div class="subheading mb-3">C.E.S. Ramon y Cajal</div>
-                            <div>Computer Science - Mainly hardware about computers and networks</div>
                             <p>Made in 2 years with note medium of 6.5</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2004 - June 2006</span></div>
@@ -214,7 +213,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Javacript
+                            Javascript
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
