--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Administrator of computer systems and local area networks </h3>
                             <div class="subheading mb-3">C.E.S. Ramon y Cajal</div>
