--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Portfolio Alberto Fernandez Alonso</title>
+        <title>Portfolio Alberto Fernandez Alonso - Informatic technician and developer</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         C\Arabial 115 · Granada, CP 18003 · 625230857 · 621334608  · 
-                        <a href="mailto:name@email.com">ciberwaters@gmail.com</a>
+                        <a href="mailto:ciberwaters@email.com">ciberwaters@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a versatile technician who adapts to any type of field, from the assembly of systems at the hardware level, to any programming field, whether web or multisystem.</p>
                     <div class="social-icons">
@@ -115,8 +115,7 @@
                             <p>Made in 2 years with note medium of 7.5 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - June 2025</span></div>
-                    </div>
-                    
+                    </div>   
                 </div>
             </section>
             <hr class="m-0" />
@@ -177,7 +176,8 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Certifications verifable on my linkedn profile</h2>
+                    <h2 class="mb-5">Certifications</h2>
+                    <p>verifiable on my linkedIn or clicking above each one</p>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
