--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Certifications</h2>
-                    <p>verifiable on my linkedIn or clicking above each one</p>
+                    <h2 class="mb-5">Certifications</br><p>verifiable on my linkedIn or clicking above each one</p></h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
