--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Certifications</br><p>verifiable on my linkedIn or clicking above each one</p></h2>
+                    <h2 class="mb-5">Certifications</h2>
+                    verifiable on my linkedIn or clicking above each one
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
