--- a/index.html
+++ b/index.html
@@ -177,67 +177,83 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
-                    <p><&nbsp><&nbsp><&nbsp>verifiable on my linkedIn or clicking above each one</br></p>
+                    <p>&nbsp &nbsp &nbsp Verifiable on my linkedIn or clicking above each one</br></p>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            PHP And MySql: Making dinamic developments
+                            <a href="https://openwebinars.net/cert/eRGb4">introducing pseudocode programming/a>
+                        </li>                      
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://openwebinars.net/cert/JJYNM">PHP And MySql: Making dinamic developments</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Creation and management of SQL databases
+                            <a href="https://openwebinars.net/cert/Ejq0K">Creation and management of SQL databases</a>
                         </li>                        
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Java 8 for developers
+                            <a href="https://openwebinars.net/cert/jqQj3">Java 8 for Java developers</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Symphony 2 and 3
+                            <a href="https://openwebinars.net/cert/a7aam">Symphony 2 and 3</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Hibernate and JPA
+                            <a href="https://openwebinars.net/cert/JJYNM">Hibernate and JPA</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            HTML5 And CSS3
+                            <a href="https://openwebinars.net/cert/QGjla">HTML5 And CSS3</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Android Studio
+                            <a href="https://openwebinars.net/cert/4Kw0e">Shell on linux</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Powershell
+                            <a href="https://openwebinars.net/cert/qQ4gO">Powershell for admins</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Javascript
+                            <a href="https://openwebinars.net/cert/1Kn0m">Javascript</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            jQuery
+                            <a href="https://openwebinars.net/cert/QGrDw">Linux</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Linux
+                            <a href="https://openwebinars.net/cert/EjqYN">Ethical Hacking</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            JSON
+                            <a href="https://openwebinars.net/cert/Wkp7B">Java 8</a>
+                        </li>                        
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://openwebinars.net/cert/0rp07">CSS</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Ajax
+                            <a href="https://openwebinars.net/cert/DLJ8j">GIT</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            GIT
+                            <a href="https://openwebinars.net/cert/Y0zlk">SQL</a>
+                        </li>                 
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://openwebinars.net/cert/l2qld">PHP</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            C++
+                            <a href="https://openwebinars.net/cert/5rL0b">C++</a>
+                        </li>            
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            jQuery, Ajax, Json and others
                         </li>
                     </ul>
                 </div>
