--- a/index.html
+++ b/index.html
@@ -178,11 +178,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
                     <p>&nbsp &nbsp &nbsp Verifiable on my linkedIn or clicking above each one</br></p>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://openwebinars.net/cert/eRGb4">introducing pseudocode programming/a>
-                        </li>                      
+                    <ul class="fa-ul mb-0">                  
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a href="https://openwebinars.net/cert/JJYNM">PHP And MySql: Making dinamic developments</a>
@@ -190,11 +186,19 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a href="https://openwebinars.net/cert/Ejq0K">Creation and management of SQL databases</a>
-                        </li>                        
+                        </li>              
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://openwebinars.net/cert/eRGb4">Introducing pseudocode programming</a>
+                        </li>                            
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a href="https://openwebinars.net/cert/jqQj3">Java 8 for Java developers</a>
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://openwebinars.net/cert/qQ4gO">Powershell for admins</a>
+                        </li>                     
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a href="https://openwebinars.net/cert/a7aam">Symphony 2 and 3</a>
@@ -209,11 +213,11 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://openwebinars.net/cert/4Kw0e">Shell on linux</a>
-                        </li>
+                            <a href="https://openwebinars.net/cert/EjqYN">Ethical Hacking</a>
+                        </li>                        
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://openwebinars.net/cert/qQ4gO">Powershell for admins</a>
+                            <a href="https://openwebinars.net/cert/4Kw0e">Shell on linux</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -222,10 +226,6 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a href="https://openwebinars.net/cert/QGrDw">Linux</a>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://openwebinars.net/cert/EjqYN">Ethical Hacking</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
