--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
-                    <p>&nbsp &nbsp &nbsp Verifiable on my linkedIn or clicking above each one</br></p>
+                    <p>&nbsp &nbsp Verifiable on my linkedIn or clicking above each one</br></p>
                     <ul class="fa-ul mb-0">                  
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
