--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Msoler's</div>
-                            <p>set up web server, configure, create domain and website, design it, document everything with diagrams to finally deploy and publish in the public domain.</p>
+                            <p>Set up web server, configure, create domain and website, design, deploy and publish it.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2005 - March 2009</span></div>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Technician</h3>
                             <div class="subheading mb-3">Toshiba corporation</div>
-                            <p>Mainly repair and mount informatical products</p>
+                            <p>Mainly repair and mount informatical products.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2014</span></div>
                     </div>
