--- a/index.html
+++ b/index.html
@@ -134,11 +134,9 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
 
-                        <li class="list-inline-item"><i class="fa-solid fa-terminal"></i></li>
-                        <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-apple"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-windows"></i></li>
-                        <li class="list-inline-item"><i class="fa-solid fa-code"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>                        
                         <li class="list-inline-item"><i class="fab fa-stack-overflow"></i></li>
@@ -152,13 +150,15 @@
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-terminal"></i></li>
                         
+                        /*<li class="list-inline-item"><i class="fa-solid fa-code"></i></li>
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-less"></i></li> */
 
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
