--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Android and Multiplatform application deployment</h3>
+                            <h3 class="mb-0">Android and Multiplatform application development</h3>
                             <div class="subheading mb-3">I.E.S. Hermenegildo Lanz</div>
                             <p>Made in 2 years with note medium of 7.5 </p>
                         </div>
