--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         C\Arabial 115 · Granada, CP 18003 · 625230857 · 621334608  · 
                         <a href="mailto:ciberwaters@email.com">ciberwaters@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a versatile technician who adapts to any type of field, from the assembly of systems at the hardware level, to any programming field, whether web or multisystem.</p>
+                    <p class="lead mb-5">I am a versatile technician who adapts to various fields, from hardware system assembly to software programming, including web development and multi-system applications.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alberto-fernandez-alonso-335a49148/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Albertuso/"><i class="fab fa-github"></i></a>
@@ -96,7 +96,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Administrator of computer systems and local area networks </h3>
                             <div class="subheading mb-3">C.E.S. Ramon y Cajal</div>
-                            <p>Made in 2 years with note medium of 6.5</p>
+                            <p>Made in 2 years with an average of 6.6</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2004 - June 2006</span></div>
                     </div>
@@ -112,7 +112,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">web application deployment</h3>
                             <div class="subheading mb-3">I.E.S. Hermenegildo Lanz</div>
-                            <p>Made in 2 years with note medium of 8 </p>
+                            <p>Made in 2 years with an average of 8 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2018 - June 2020</span></div>
                     </div>
@@ -120,7 +120,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Android and Multiplatform application development</h3>
                             <div class="subheading mb-3">I.E.S. Hermenegildo Lanz</div>
-                            <p>Made in 2 years with note medium of 7.5 </p>
+                            <p>Made in 2 years with an average of 7.5 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - June 2025</span></div>
                     </div>   
