--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </li>            
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            jQuery, Ajax, Json and others
+                            <a href="">jQuery, Ajax, Json and others</a>
                         </li>
                     </ul>
                 </div>
