--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="typewriter">
-                        Alberto mb-0
+                    <h1 class="mb-0">
+                        Alberto
                         <span class="text-primary">Fernandez Alonso</span>
                     </h1>
                     <div class="subheading mb-5">
