--- a/index.html
+++ b/index.html
@@ -275,6 +275,18 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts.js"></script> 
+        <!-- Agrega este script en tu HTML en la cabecera o antes del cierre del body -->
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+        <script>
+          var typed = new Typed('.typewriter', {
+            strings: ["Experiencia"], // Puedes añadir más frases si quieres que el texto cambie
+            typeSpeed: 50,
+            backSpeed: 25,
+            loop: false // Cambia a true si deseas que el efecto se repita
+            });
+        </script>
+        
     </body>
 </html>
