--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
         <script>
           var typed = new Typed('.typewriter', {
             strings: ["Experiencia"], // Puedes añadir más frases si quieres que el texto cambie
-            typeSpeed: 50,
-            backSpeed: 25,
-            loop: false // Cambia a true si deseas que el efecto se repita
+            typeSpeed: 25,
+            backSpeed: 5,
+            loop: true // Cambia a true si deseas que el efecto se repita
             });
         </script>
         
