--- a/index.html
+++ b/index.html
@@ -276,8 +276,22 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script> 
-        <!-- Agrega este script en tu HTML en la cabecera o antes del cierre del body -->
-        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<!-- Añade el script de Typed.js -->
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+<script>
+  // Detectar cuando el ratón se posiciona sobre el elemento
+  document.querySelector('.typewriter').addEventListener('mouseenter', function() {
+    // Si ya se ha activado el efecto, evitar que se inicie de nuevo
+      // Inicia el efecto de Typed.js
+      new Typed('.typewriter', {
+        strings: ["Experiencia"], // Puedes añadir más frases
+        typeSpeed: 50,
+        backSpeed: 25,
+        loop: false // Cambia a true si deseas que el efecto se repita
+      });
+  });
+</script>
         
     </body>
 </html>
