--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       new Typed('.typewriter', {
         typeSpeed: 30,
         backSpeed: 15,
-        loop: false // Cambia a true si deseas que el efecto se repita
+        loop: true
       });
   });
 </script>
