--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5 typewriter">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
+                        <div class="flex-grow-1"><a href="https://msolers.com/">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Msoler's</div>
                             <p>Set up web server, configure, create domain and website, design, deploy and publish it.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2005 - March 2009</span></div>
-                    </div>
+                    </div></a>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Technician</h3>
