--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Technician</h3>
-                            <div class="subheading mb-3">Toshiba corporation</div>
+                            <div class="subheading mb-3"><a href="https://www.toshiba.es/pages/es/">Toshiba corporation</div></a>
                             <p>Mainly repair and mount informatical products.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2014</span></div>
@@ -80,7 +80,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Helpdesk Technician</h3>
-                            <div class="subheading mb-3">Seidor Microsistemes - Esteve Lab's</div>
+                            <div class="subheading mb-3"><a href="https://www.seidor.com/">Seidor Microsistemes </a>- <a href="https://www.esteve.com/es">Esteve Lab's</div></a>
                             <p>In-person and remote assistance to users of specific proprietary systems.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2014 - June 2018</span></div>
