--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5 typewriter">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1"><a href="https://msolers.com/">
+                        <div class="flex-grow-1"><a href="https://msolers.com/" target="_blank">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Msoler's</div></a>
                             <p>Set up web server, configure, create domain and website, design, deploy and publish it.</p>
@@ -72,7 +72,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Technician</h3>
-                            <div class="subheading mb-3"><a href="https://www.toshiba.es/pages/es/">Toshiba corporation</div></a>
+                            <div class="subheading mb-3"><a href="https://www.toshiba.es/pages/es/" target="_blank">Toshiba corporation</div></a>
                             <p>Mainly repair and mount informatical products.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2014</span></div>
@@ -80,7 +80,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Helpdesk Technician</h3>
-                            <div class="subheading mb-3"><a href="https://www.seidor.com/">Seidor Microsistemes </a>- <a href="https://www.esteve.com/es">Esteve Lab's</div></a>
+                            <div class="subheading mb-3"><a href="https://www.seidor.com/" target="_blank">Seidor Microsistemes </a>- <a href="https://www.esteve.com/es" target="_blank">Esteve Lab's</div></a>
                             <p>In-person and remote assistance to users of specific proprietary systems.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2014 - June 2018</span></div>
