--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Alberto
+                        <a href="./pg/html/index.html">Alberto</a>
                         <span class="text-primary">Fernandez Alonso</span>
                     </h1>
                     <div class="subheading mb-5">
