--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Portfolio Alberto Fernandez Alonso - Informatic technician and developer" />
         <meta name="author" content="Alberto Fernandez Alonso" />
         <title>Portfolio Alberto Fernandez Alonso - Informatic technician and developer</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -40,7 +40,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        <a href="./pg/html/index.html">Alberto</a>
+                        Albert<a href="./pg/html/index.html">o</a>
                         <span class="text-primary">Fernandez Alonso</span>
                     </h1>
                     <div class="subheading mb-5">
