--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Fernandez Alonso</span>
                     </h1>
                     <div class="subheading mb-5">
-                        C\Arabial 115 · Granada, CP 18003 · 625230857 · 621334608  · 
+                        C\Arabial 115 · Granada, CP 18003 · 625 · 230857
                         <a href="mailto:ciberwaters@email.com">ciberwaters@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a versatile technician who adapts to various fields, from hardware system assembly to software programming, including web development and multi-system applications.</p>
